--- a/src/app/sell/sell.page.html
+++ b/src/app/sell/sell.page.html
@@ -136,8 +136,8 @@
         >Registrar</ion-button
       >
       <!-- <ion-button expand="full" type="submit" 
-        >Guardar</ion-button -->
-      >
+        >Guardar</ion-button> -->
+      
     </form>
   </ion-grid>
 </ion-content>
