--- a/src/app/auth/register/register.page.scss
+++ b/src/app/auth/register/register.page.scss
@@ -5,12 +5,10 @@ form {
 }
 
 .intro {
-  width: 100%;
-  height: 100%;
-  font-family: 'DM Sans', sans-serif;
+ 
 
   &__content__image {
-    height: 25vh;
+    height: 20vh;
     width: 100%;
     display: flex;
     align-items: center;
@@ -23,4 +21,8 @@ form {
     }
   }
 
+}
+
+ion-content{
+  font-family: 'DM Sans', sans-serif;
 }
