Register new user, validate if exist email , edit avatar profile when no exist

--- a/src/app/markteplace/components/profile-card/profile-card.component.html
+++ b/src/app/markteplace/components/profile-card/profile-card.component.html
@@ -1,5 +1,6 @@
 <div class="profile">
-  <img (click)="viewProfile(profile.id)" class="profile__image-avatar" src="{{ profile.photo }}" />
+  <img *ngIf="profile.photo" (click)="viewProfile(profile.id)" class="profile__image-avatar" src="{{ profile.photo }}" />
+  <img *ngIf="!profile.photo" (click)="viewProfile(profile.id)" class="profile__image-avatar" src="../../assets/images/avatar-profile.jpg" />
   <div (click)="viewProfile(profile.id)" class="profile__title">
     {{ profile.name }}
   </div>
