Profile image update, and main data, new design in my profile view

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,7 @@
   
   <app-category-list class="item-list" [categories]="categories[0]"></app-category-list>
   <!-- List Products discounted -->
-  <app-discounted-product-list [products]="products[0]"></app-discounted-product-list>
+  <app-discounted-product-list ></app-discounted-product-list>
   <!-- Profile list -->
   <app-recommended-profile-list [profiles]="profiles[0]"></app-recommended-profile-list>
 <!-- List Products recomended -->
