--- a/src/app/profile/profile.page.scss
+++ b/src/app/profile/profile.page.scss
@@ -1,52 +1,118 @@
 .img-profile {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-
-.img-file{
+.img-file {
   width: 50%;
   border-radius: 20px !important;
   overflow: hidden;
-
 }
 
-.containet{
+.containet {
   text-align: center;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
-.title-profile{
+.title-profile {
   font-size: 1.2rem;
   font-weight: bold;
-  
 }
 
-.container{
+.container {
   padding-left: 1rem;
   padding-right: 1rem;
 }
 
-.favorite { 
-    font-size: 1.7rem;
-  }
-  ion-card-title  {
-    font-size: 100%;
-  }
-  
-ion-card img{
+.favorite {
+  font-size: 1.7rem;
+}
+ion-card-title {
+  font-size: 100%;
+}
+
+ion-card img {
   height: 100px;
 }
 
-
-
-.img-center{
-  width:100%;
+.img-center {
+  width: 100%;
 }
-  
-.card{
+
+.card {
   margin: 0;
-    padding: 0;
+  padding: 0;
+}
+
+.profile {
+  padding: 0.5rem;
+
+  &__header {
+    margin: 0.3em;
+    margin: 0.3em;
+    height: 15vh;
+    width: 100%;
+    border-radius: 0.5em;
+    display: grid;
+    grid-template-rows: 2fr 1fr;
+    justify-content: center;
+    align-items: center;
+
+    &--image {
+      border-radius: 50%;
+      height: 6rem;
+      width: 6rem;
+      margin: auto;
+      object-fit: cover;
+      object-position: center center;
+      padding: auto;
+      box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    }
+
+    &--title {
+      margin-top: 0.5rem;
+      font-weight: 700;
+    }
+
+    &--rating {
+      color: rgb(156, 161, 161);
+      text-align: center;
+    }
+  }
+
+  &__info {
+    margin-top: 1rem;
+
+    display: grid;
+    grid-template-columns: 33.33% 33.33% 33.33%;
+    justify-content: center;
+    align-items: center;
+
+    &--box {
+      background-color: hsla(0, 0%, 96%, 0.567);
+      margin: 0.7rem;
+      font-size: 0.8em;
+      text-align: center;
+      position: relative;
+      border-radius: 20%;
+    }
+  }
+
+  &__btns {
+    margin: 0 1rem;
+    display: grid;
+    grid-template-columns: 70% 30%;
+    justify-content: center;
+    align-items: center;
+
+    &--chat {
+      text-align: center;
+    }
+    &--favorite {
+      font-size: 2rem;
+      text-align: center;
+      color: var(--ion-color-favorite);
+    }
+  }
 }
