--- a/src/app/markteplace/pages/product/product.page.html
+++ b/src/app/markteplace/pages/product/product.page.html
@@ -62,7 +62,7 @@
   <ion-button
     expand="block"
     shape="round"
-    (click)="sendMessage(product.profileId)"
+    (click)="sendMessage(product.id)"
     >Comprar</ion-button
   >
 </ion-footer>
