--- a/src/app/markteplace/pages/chats/chats.page.html
+++ b/src/app/markteplace/pages/chats/chats.page.html
@@ -62,7 +62,7 @@
   </ion-list>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button>
+    <ion-fab-button (click)="newchat()">
       <ion-icon name="add-outline"></ion-icon>
     </ion-fab-button>
   </ion-fab>
