--- a/src/app/markteplace/pages/detail-response-quote/detail-response-quote.page.html
+++ b/src/app/markteplace/pages/detail-response-quote/detail-response-quote.page.html
@@ -61,7 +61,10 @@
         <h2><strong>Detalle Oferta:</strong></h2>
       </ion-col>
       <ion-col size="12">
-        <ion-label> {{responsesDetail.comment}} </ion-label>
+        <ion-label> <strong>{{responsesDetail.comment}}</strong> </ion-label>
+      </ion-col>
+      <ion-col size="12">
+        <ion-label> {{responsesDetail.terms}} </ion-label>
       </ion-col>
       <ion-col size="12">
         <ion-label> <strong>Válida hasta: </strong> {{ responsesDetail.expiration |date:'dd/MM/yyyy' }}</ion-label>
@@ -70,5 +73,6 @@
    
    
     <ion-button expand="block">Aceptar Oferta</ion-button>
+    <ion-button fill="clear" color="danger" expand="block">Anular Oferta</ion-button>
   </ion-card-content>
 </ion-content>
