--- a/src/app/sell/sell.page.html
+++ b/src/app/sell/sell.page.html
@@ -3,6 +3,19 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-modal trigger="select-fruits" #modal>
+    <ng-template>
+      <app-category-search
+        class="ion-page"
+        title="Categorias"
+        [categories]="categories"
+        [selectedCategory]="selectedCategory"
+        (selectionChange)="categorySelectionChanged($event)"
+        (selectionCancel)="modal.dismiss()"
+      ></app-category-search>
+    </ng-template>
+  </ion-modal>
+
   <ion-grid>
     <div class="ion-text-center">
       <h2>Registrar</h2>
@@ -66,24 +79,18 @@
 
       <ion-row>
         <ion-col size="12">
-          <ion-item lines="none">
-            <ion-label position="stacked">Categorias</ion-label>
-            <ion-select
-              multiple="true"
-              (ionChange)="handleChange($event)"
-              placeholder="Seleccione una categoria"
-              required
-            >
-              <ion-select-option
-                *ngFor="let category of categories"
-                [value]="category"
-                >{{category.name}}</ion-select-option
-              >
-            </ion-select>
+          <ion-item
+          lines="none"
+            [button]="true"
+            color="gray"
+            [detail]="false"
+            id="select-fruits"
+          >
+            <ion-label><strong>Seleccionar Categorias</strong></ion-label>
           </ion-item>
         </ion-col>
         <ion-col size="12">
-          <span *ngFor="let category of categoriesSelect">
+          <span *ngFor="let category of selectedCategory">
             <ion-badge color="medium">{{category.name}}</ion-badge>
           </span>
         </ion-col>
@@ -121,7 +128,6 @@
       </ion-row>
       <ion-label>Imagenes del producto</ion-label>
       <ion-row>
-
         <ion-col size="6">
           <ion-button expand="full" shape="round" (click)="selectImageCamera()">
             <ion-icon slot="start" name="camera"></ion-icon>
@@ -154,8 +160,6 @@
       >
       <!-- <ion-button expand="full" type="submit" 
         >Guardar</ion-button> -->
-      
     </form>
   </ion-grid>
 </ion-content>
-
