--- a/src/app/auth/login/login.page.scss
+++ b/src/app/auth/login/login.page.scss
@@ -10,7 +10,7 @@ form {
   font-family: "DM Sans", sans-serif;
 
   &__content__image {
-    height: 25vh;
+    height: 23vh;
     width: 100%;
     display: flex;
     align-items: center;
@@ -30,4 +30,21 @@ form {
 }
 ion-content{
   font-family: 'DM Sans', sans-serif;
+}
+
+
+.custom-button {
+  margin: 8px;
+  border-radius: 8px;
+  transition: background-color 0.3s, box-shadow 0.3s;
+}
+
+.google-button {
+  background-color: #db4437;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.facebook-button {
+  background-color: #1877f2;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
