Privacy policy modal window short version

--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -78,9 +78,9 @@
       <ion-icon name="help-circle" slot="start"></ion-icon>
       <ion-label>Ayuda</ion-label>
     </ion-item> -->
-    <ion-item>
+    <ion-item (click)="openPrivacyPolicyModal()">
       <ion-icon name="information-circle" slot="start"></ion-icon>
-      <ion-label>Políticas, Términos y Condiciones</ion-label>
+      <ion-label>Política de privacidad de Tianguis.</ion-label>
     </ion-item>
   </ion-list>
 </ion-content>
