--- a/src/app/quote/quote.page.html
+++ b/src/app/quote/quote.page.html
@@ -8,9 +8,25 @@
       <app-quote-list [quotes]="quotes[0]"></app-quote-list>
   </ion-list>
 
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="newQuote()">
+  <!-- <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="newQuote()">
     <ion-fab-button>
       <ion-icon name="add-outline"></ion-icon>
     </ion-fab-button>
+  </ion-fab> -->
+  <ion-fab slot="fixed" vertical="bottom" horizontal="start">
+    <ion-fab-button>
+      <ion-icon name="add-outline"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="top">
+      <ion-button color="tertiary"  (click)="newQuote()">
+        <ion-icon name="add-circle-outline"></ion-icon>
+        <ion-label>Nueva</ion-label>
+      </ion-button>
+      <ion-button color="success" (click)="getQuoteUser()">
+        <ion-icon name="list-circle-outline"></ion-icon>
+        <ion-label>Mis Cotizaciones</ion-label>
+      </ion-button>
+    </ion-fab-list>
   </ion-fab>
+    
 </ion-content>
