refresher lists home

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -21,5 +21,5 @@
   <!-- List Products recomended -->
   <app-recommended-product-list></app-recommended-product-list>
   <!-- List Product -->
-  <app-list-product-card-big></app-list-product-card-big>
+  <app-list-product-card-big [products]="productsBig"></app-list-product-card-big>
 </ion-content>
