--- a/src/app/markteplace/components/list-product-card-big/list-product-card-big.component.html
+++ b/src/app/markteplace/components/list-product-card-big/list-product-card-big.component.html
@@ -1,3 +1,6 @@
 <div *ngFor="let product of products">
   <app-product-card-big [product]="product"></app-product-card-big>
 </div>
+<ion-infinite-scroll (ionInfinite)="loadMore($event)">
+  <ion-infinite-scroll-content loadingText="Cargando más productos..."></ion-infinite-scroll-content>
+</ion-infinite-scroll>
